# xiaoxuan-native-codegen-x86-64

./: .gitignore  Cargo.toml  README.md
data/: README.md  x86_64.ason
src/: lib.rs  record_parser.rs  types.rs
src/data/: README.md  x86_64.ason
tests/: read-elf.rs  write-elf.rs
tests/resources/asm/: arithmetic.S  base.S  bitwise.S  branch.S  call.S  comparison.S  compile.sh  conversion.S  extcall.S  float-arithmetic.S  float-branch.S  float-conversion.S  float-mov.S  ins-branch.S  ins-call.S  ins-comparison.S  ins-mov.S  memory.S  mov.S  stack.S  syscall.S  variable-args.S
tests/resources/c/: base.c  call.c  compile.sh  control-flow.c  control-flow.ll  extcall.c  float-branch.c  float-conversion.c  struct.c  syscall.c  variable-args.c
tests/resources/codegen/: README.txt
tests/resources/ins/: compile.sh  ins-arithmetic.S  ins-branch.S  ins-comparison.S  ins-mov.S
